[gd_scene load_steps=4 format=3 uid="uid://dldkm6m8ux87t"]

[ext_resource type="Script" path="res://scripts/objects/bullet.gd" id="1_vy7io"]
[ext_resource type="SpriteFrames" uid="uid://cbfq7bqkgh3ti" path="res://resources/bullets/player/player_bullet_spriteframes.tres" id="2_p3jja"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rwjyl"]

[node name="Bullet" type="Area2D"]
collision_layer = 0
collision_mask = 2
input_pickable = false
monitorable = false
script = ExtResource("1_vy7io")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.03, 0.03)
sprite_frames = ExtResource("2_p3jja")
animation = &"simple"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_rwjyl")

[node name="SelfDestruct" type="Timer" parent="."]
one_shot = true

[node name="Activator" type="Timer" parent="."]
wait_time = 0.05

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SelfDestruct" to="." method="_on_self_destruct_timeout"]
[connection signal="timeout" from="Activator" to="." method="_on_activator_timeout"]
